--- a/home.html
+++ b/home.html
@@ -62,9 +62,9 @@
                 <li class="nav-item">
                   <a class="ud-menu-scroll" href="#about">About</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="ud-menu-scroll" href="#pricing">Pricing</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                   <a class="ud-menu-scroll" href="#team">Team</a>
                 </li>
@@ -72,48 +72,77 @@
                   <a class="ud-menu-scroll" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item nav-item-has-children">
-                  <a href="javascript:void(0)"> Pages </a>
-                  <ul class="ud-submenu">
-                    <li class="ud-submenu-item">
-                      <a href="about.html" class="ud-submenu-link">
-                        About Page
-                      </a>
-                    </li>
-                    <li class="ud-submenu-item">
-                      <a href="pricing.html" class="ud-submenu-link">
-                        Pricing Page
-                      </a>
-                    </li>
-                    <li class="ud-submenu-item">
-                      <a href="contact.html" class="ud-submenu-link">
-                        Contact Page
-                      </a>
-                    </li>
-                    <li class="ud-submenu-item">
-                      <a href="blog.html" class="ud-submenu-link">
-                        Blog Grid Page
-                      </a>
-                    </li>
-                    <li class="ud-submenu-item">
-                      <a href="blog-details.html" class="ud-submenu-link">
-                        Blog Details Page
-                      </a>
-                    </li>
-                    <!-- <li class="ud-submenu-item">
-                      <a href="login.html" class="ud-submenu-link">
-                        Sign In Page
-                      </a>
-                    </li> -->
-                    <li class="ud-submenu-item">
-                      <a href="404.html" class="ud-submenu-link">404 Page</a>
-                    </li>
-                  </ul>
+                  <a href="http://localhost:5500/blog-grid.html"> Blog Grid </a>
                 </li>
               </ul>
-              <label class="theme-switch">
-                <input type="checkbox" id="themeToggle" />
-                <span class="slider round"></span>
+              <!-- From Uiverse.io by RiccardoRapelli -->
+              <label class="switch">
+                <input id="input" type="checkbox" checked="darkTheme" />
+                <div class="slider round">
+                  <div class="sun-moon">
+                    <svg id="moon-dot-1" class="moon-dot" viewBox="0 0 100 100">
+                      <circle cx="50" cy="50" r="50"></circle>
+                    </svg>
+                    <svg id="moon-dot-2" class="moon-dot" viewBox="0 0 100 100">
+                      <circle cx="50" cy="50" r="50"></circle>
+                    </svg>
+                    <svg id="moon-dot-3" class="moon-dot" viewBox="0 0 100 100">
+                      <circle cx="50" cy="50" r="50"></circle>
+                    </svg>
+                    <svg id="light-ray-1" class="light-ray" viewBox="0 0 100 100">
+                      <circle cx="50" cy="50" r="50"></circle>
+                    </svg>
+                    <svg id="light-ray-2" class="light-ray" viewBox="0 0 100 100">
+                      <circle cx="50" cy="50" r="50"></circle>
+                    </svg>
+                    <svg id="light-ray-3" class="light-ray" viewBox="0 0 100 100">
+                      <circle cx="50" cy="50" r="50"></circle>
+                    </svg>
+
+                    <svg id="cloud-1" class="cloud-dark" viewBox="0 0 100 100">
+                      <circle cx="50" cy="50" r="50"></circle>
+                    </svg>
+                    <svg id="cloud-2" class="cloud-dark" viewBox="0 0 100 100">
+                      <circle cx="50" cy="50" r="50"></circle>
+                    </svg>
+                    <svg id="cloud-3" class="cloud-dark" viewBox="0 0 100 100">
+                      <circle cx="50" cy="50" r="50"></circle>
+                    </svg>
+                    <svg id="cloud-4" class="cloud-light" viewBox="0 0 100 100">
+                      <circle cx="50" cy="50" r="50"></circle>
+                    </svg>
+                    <svg id="cloud-5" class="cloud-light" viewBox="0 0 100 100">
+                      <circle cx="50" cy="50" r="50"></circle>
+                    </svg>
+                    <svg id="cloud-6" class="cloud-light" viewBox="0 0 100 100">
+                      <circle cx="50" cy="50" r="50"></circle>
+                    </svg>
+                  </div>
+                  <div class="stars">
+                    <svg id="star-1" class="star" viewBox="0 0 20 20">
+                      <path
+                        d="M 0 10 C 10 10,10 10 ,0 10 C 10 10 , 10 10 , 10 20 C 10 10 , 10 10 , 20 10 C 10 10 , 10 10 , 10 0 C 10 10,10 10 ,0 10 Z">
+                      </path>
+                    </svg>
+                    <svg id="star-2" class="star" viewBox="0 0 20 20">
+                      <path
+                        d="M 0 10 C 10 10,10 10 ,0 10 C 10 10 , 10 10 , 10 20 C 10 10 , 10 10 , 20 10 C 10 10 , 10 10 , 10 0 C 10 10,10 10 ,0 10 Z">
+                      </path>
+                    </svg>
+                    <svg id="star-3" class="star" viewBox="0 0 20 20">
+                      <path
+                        d="M 0 10 C 10 10,10 10 ,0 10 C 10 10 , 10 10 , 10 20 C 10 10 , 10 10 , 20 10 C 10 10 , 10 10 , 10 0 C 10 10,10 10 ,0 10 Z">
+                      </path>
+                    </svg>
+                    <svg id="star-4" class="star" viewBox="0 0 20 20">
+                      <path
+                        d="M 0 10 C 10 10,10 10 ,0 10 C 10 10 , 10 10 , 10 20 C 10 10 , 10 10 , 20 10 C 10 10 , 10 10 , 10 0 C 10 10,10 10 ,0 10 Z">
+                      </path>
+                    </svg>
+                  </div>
+                </div>
               </label>
+
             </div>
         </div>
         </nav>
@@ -281,7 +310,7 @@
   <!-- ====== About End ====== -->
 
   <!-- ====== Pricing Start ====== -->
-  <section id="pricing" class="ud-pricing">
+  <!-- <section id="pricing" class="ud-pricing">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -369,7 +398,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- ====== Pricing End ====== -->
 
   <!-- ====== FAQ Start ====== -->
@@ -1098,8 +1127,7 @@
 
     window.document.addEventListener("scroll", onScroll);
 
-
-    const toggle = document.getElementById("themeToggle");
+    const toggle = document.getElementById("input");
     const header = document.querySelector(".ud-header");
     const hero = document.querySelector(".ud-hero");
     const features = document.querySelector(".ud-features");
@@ -1108,6 +1136,17 @@
     const team = document.querySelector(".ud-team");
     const message = document.querySelector(".ud-contact");
 
+    // Apply dark theme by default
+    header.classList.add("dark-theme");
+    hero.classList.add("dark-theme");
+    features.classList.add("dark-theme");
+    about.classList.add("dark-theme");
+    testimonial.classList.add("dark-theme");
+    team.classList.add("dark-theme");
+    message.classList.add("dark-theme");
+    toggle.checked = true; // visually mark the toggle as ON
+
+    // Toggle on change
     toggle.addEventListener("change", function () {
       header.classList.toggle("dark-theme");
       hero.classList.toggle("dark-theme");
@@ -1117,9 +1156,8 @@
       team.classList.toggle("dark-theme");
       message.classList.toggle("dark-theme");
     });
-
-
   </script>
+
 </body>
 
 </html>
