--- a/blog-grid.html
+++ b/blog-grid.html
@@ -361,7 +361,7 @@
         <div class="row">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="ud-widget">
-              <a href="index.html" class="ud-footer-logo">
+              <a href="home.html" class="ud-footer-logo">
                 <span class="fw-bold text-white startup-logo">Startup Template</span>
               </a>
               <p class="ud-widget-desc">
