--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="home.html">
               <span class="fw-bold text-white startup-logo">Startup Template</span>
             </a>
             <button class="navbar-toggler">
@@ -179,8 +179,11 @@
               </li>
             </ul>
           </div>
-          <div class="ud-hero-brands-wrapper wow fadeInUp" data-wow-delay=".3s">
-            <img src="assets/images/hero/brand.svg" alt="brand" />
+          <div class="ud-hero-brands-wrapper wow fadeInUp logo-img-css" data-wow-delay=".3s">
+            <img src="assets/images/icons/gopher.svg" alt="gopher" />
+            <img src="assets/images/icons/python.svg" alt="python" />
+            <img src="assets/images/icons/kubernatives.svg" alt="kubernatives" />
+            <img src="assets/images/icons/docker.svg" alt="docker" />
           </div>
           <div class="ud-hero-image wow fadeInUp" data-wow-delay=".25s">
             <img src="assets/images/hero/hero-image.svg" alt="hero-image" />
@@ -909,7 +912,7 @@
         <div class="row">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="ud-widget">
-              <a href="index.html" class="ud-footer-logo">
+              <a href="home.html" class="ud-footer-logo">
                 <span class="fw-bold text-white startup-logo">Startup Template</span>
               </a>
               <p class="ud-widget-desc">
