--- a/pricing.html
+++ b/pricing.html
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
-              <a class="navbar-brand" href="index.html">
+              <a class="navbar-brand" href="home.html">
                 <span class="fw-bold text-white startup-logo">Startup Template</span>
               </a>
               <button class="navbar-toggler">
@@ -408,7 +408,7 @@
           <div class="row">
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="ud-widget">
-                <a href="index.html" class="ud-footer-logo">
+                <a href="home.html" class="ud-footer-logo">
                   <span class="fw-bold text-white startup-logo">Startup Template</span>
                 </a>
                 <p class="ud-widget-desc">
