--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
                   <a class="ud-menu-scroll" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item nav-item-has-children">
-                  <a href="http://localhost:5500/blog-grid.html"> Blog Grid </a>
+                  <a href="blog-grid.html"> Blog Grid </a>
                 </li>
               </ul>
               <!-- From Uiverse.io by RiccardoRapelli -->
