--- a/blog-details.html
+++ b/blog-details.html
@@ -53,7 +53,7 @@
                   <a href="home.html#contact">Contact</a>
                 </li>
                 <li class="nav-item nav-item-has-children selected">
-                  <a href=""> Blog Grid </a>
+                  <a href="blog-grid.html"> Blog Grid </a>
                 </li>
               </ul>
               <!-- From Uiverse.io by RiccardoRapelli -->
