front-page-visibility

--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
-              <a class="navbar-brand" href="home.html">
+              <a class="navbar-brand" href="index.html">
                 <span class="fw-bold text-white startup-logo">Startup Template</span>
               </a>
               <button class="navbar-toggler">
@@ -39,20 +39,20 @@
                 <ul id="nav" class="navbar-nav mx-auto">
                   <li class="nav-item">
                     <!-- <a class="ud-menu-scroll" href="http://localhost:5500/index.html">Home</a> -->
-                    <a href="home.html#home">Home</a>
+                    <a href="index.html#home">Home</a>
                   </li>
   
                   <li class="nav-item">
-                    <a href="home.html#about">About</a>
+                    <a href="index.html#about">About</a>
                   </li>
                   <!-- <li class="nav-item">
                       <a class="ud-menu-scroll" href="#pricing">Pricing</a>
                     </li> -->
                   <li class="nav-item">
-                    <a href="home.html#team">Team</a>
+                    <a href="index.html#team">Team</a>
                   </li>
                   <li class="nav-item">
-                    <a href="home.html#contact">Contact</a>
+                    <a href="index.html#contact">Contact</a>
                   </li>
                   <li class="nav-item nav-item-has-children selected">
                     <a href="blog-grid.html"> Blog Grid </a>
@@ -195,7 +195,7 @@
           <div class="row">
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="ud-widget">
-                <a href="home.html" class="ud-footer-logo">
+                <a href="index.html" class="ud-footer-logo">
                   <span class="fw-bold text-white startup-logo">Startup Template</span>
                 </a>
                 <p class="ud-widget-desc">
