--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="home.html">
+            <a class="navbar-brand" href="index.html">
               <span class="fw-bold text-white startup-logo">Startup Template</span>
             </a>
             <button class="navbar-toggler">
@@ -866,7 +866,9 @@
         <div class="col-xl-4 col-lg-5">
           <div class="ud-contact-form-wrapper wow fadeInUp" data-wow-delay=".2s">
             <h3 class="ud-contact-form-title">Send us a Message</h3>
-            <form class="ud-contact-form">
+            <form class="ud-contact-form"
+              action="https://script.google.com/macros/s/AehSKLik0LIMwtphPMj2eKvsAvdPeMblDtoNVA0xPScMy3oDI6ICfrlX9iJdMJJRQV2mbgEcERVFXF0k5RmK_AWTB5iKp_/exec"
+              method="post" data-email="ashay.tamrakar@gmail.com">
               <div class="ud-form-group">
                 <label for="fullName">Full Name*</label>
                 <input type="text" name="fullName" placeholder="Adam Gelius" />
@@ -912,7 +914,7 @@
         <div class="row">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="ud-widget">
-              <a href="home.html" class="ud-footer-logo">
+              <a href="index.html" class="ud-footer-logo">
                 <span class="fw-bold text-white startup-logo">Startup Template</span>
               </a>
               <p class="ud-widget-desc">
