updated company details

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Play | Open source Project by UIdeck</title>
+      <title>Contact CloudScan AI | Get Your Free Consultation</title>
 
   <!--====== Favicon Icon ======-->
   <link rel="shortcut icon" href="assets/images/favicon.svg" type="image/svg" />
@@ -130,8 +130,8 @@
             <div class="ud-contact-title">
               <span>CONTACT US</span>
               <h2>
-                Let’s talk about <br />
-                Love to hear from you!
+                Ready to Transform <br />
+                Your Business?
               </h2>
             </div>
             <div class="ud-contact-info-wrapper">
@@ -141,7 +141,7 @@
                 </div>
                 <div class="ud-info-meta">
                   <h5>Our Location</h5>
-                  <p>401 Broadway, 24th Floor, Orchard Cloud View, London</p>
+                  <p>Remote & On-site Consulting Worldwide</p>
                 </div>
               </div>
               <div class="ud-single-info">
@@ -149,9 +149,9 @@
                   <i class="lni lni-envelope"></i>
                 </div>
                 <div class="ud-info-meta">
-                  <h5>How Can We Help?</h5>
-                  <p>info@yourdomain.com</p>
-                  <p>contact@yourdomain.com</p>
+                  <h5>Get In Touch</h5>
+                  <p>info@cloudscanai.com</p>
+                  <p>consulting@cloudscanai.com</p>
                 </div>
               </div>
             </div>
@@ -211,7 +211,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="ud-widget">
               <a href="index.html" class="ud-footer-logo">
-                <span class="fw-bold text-white startup-logo">Startup Template</span>
+                <span class="fw-bold text-white startup-logo">CloudScan AI</span>
               </a>
               <p class="ud-widget-desc">
                 We create digital experiences for brands and companies by
