--- a/blog-grid.html
+++ b/blog-grid.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Play | Open source Project by UIdeck</title>
+  <title>CloudScan AI Blog | Kubernetes, AI & Cloud Insights</title>
 
   <!--====== Favicon Icon ======-->
   <link rel="shortcut icon" href="assets/images/favicon.svg" type="image/svg" />
@@ -25,7 +25,7 @@
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">
-              <span class="fw-bold text-white startup-logo">Startup Template</span>
+              <span class="fw-bold text-white startup-logo">CloudScan AI</span>
             </a>
             <button class="navbar-toggler">
               <span class="toggler-icon"> </span>
@@ -362,7 +362,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="ud-widget">
               <a href="index.html" class="ud-footer-logo">
-                <span class="fw-bold text-white startup-logo">Startup Template</span>
+                <span class="fw-bold text-white startup-logo">CloudScan AI</span>
               </a>
               <p class="ud-widget-desc">
                 We create digital experiences for brands and companies by
